--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,8 @@
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <target>../target</target>
+
     </properties>
     <dependencies>
         <dependency>
@@ -67,6 +69,29 @@
 
 
     </dependencies>
+    <packaging>jar</packaging>
 
+    <build>
+
+        <finalName>test</finalName>
+
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+<!--                <configuration>-->
+<!--&lt;!&ndash;                        <mainClass>start.TestApplication</mainClass>&ndash;&gt;-->
+<!--&lt;!&ndash;                        <layout>JAR</layout>&ndash;&gt;-->
+<!--                    &lt;!&ndash;配置为执行&ndash;&gt;-->
+
+<!--                    <outputDirectory>${target}</outputDirectory>-->
+<!--                </configuration>-->
+
+            </plugin>
+
+
+
+        </plugins>
+    </build>
 
 </project>
