--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -48,8 +48,16 @@ jobs:
 
     
    
-    - name: 使用Codecov测试覆盖率 
-      uses: codecov/codecov-action@v4.0.1
-      with:
-         token: ${{ secrets.CODECOV_TOKEN }}
-         slug: linlsyf/test
+#    - name: 使用Codecov测试覆盖率
+#      uses: codecov/codecov-action@v4.0.1
+#      with:
+#         token: ${{ secrets.CODECOV_TOKEN }}
+#         slug: linlsyf/test
+
+    - name: Upload coverage reports to Codecov
+      run: |
+                 # Replace `linux` below with the appropriate OS
+                 # Options are `alpine`, `linux`, `macos`, `windows`
+                 curl -Os https://uploader.codecov.io/latest/linux/codecov
+                 chmod +x codecov
+                 ./codecov -t ${CODECOV_TOKEN}
