--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -43,8 +43,8 @@ jobs:
     - name: 启动项目
       run: sshpass -p ${{secrets.REMOTE_PWD}} ssh -o StrictHostKeyChecking=no root@${{secrets.REMOTE_IP}} "cd /root/GitHub_Action && chmod +x run.sh && ./run.sh"
     
-    - name: 测试
-      run: sshpass -p ${{secrets.REMOTE_PWD}} ssh -o StrictHostKeyChecking=no root@${{secrets.REMOTE_IP}} " cd /root/GitHub_Action && source /etc/profile;java -jar test.jar CharactersMainTest  aabcccbbad  abcccbad"
+#    - name: 测试
+#      run: sshpass -p ${{secrets.REMOTE_PWD}} ssh -o StrictHostKeyChecking=no root@${{secrets.REMOTE_IP}} " cd /root/GitHub_Action && source /etc/profile;java -jar test.jar CharactersMainTest  aabcccbbad  abcccbad"
 
     
    
