--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -54,7 +54,7 @@ jobs:
 #         token: ${{ secrets.CODECOV_TOKEN }}
 #         slug: linlsyf/test
 
-    - name: Upload coverage reports to Codecov
+    - name: 上传覆盖率 coverage reports to Codecov
       run: |
                  # Replace `linux` below with the appropriate OS
                  # Options are `alpine`, `linux`, `macos`, `windows`
