--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -65,4 +65,4 @@ jobs:
     - name: 使用Codecov测试覆盖率
       uses: codecov/codecov-action@v4-beta
       env:
-         CODECOV_TOKEN: ${{ secrets.CODECOV_ORG_TOKEN }}
+         CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
