删除中文注释

--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,9 @@
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
                 <version>0.8.7</version>
+                <configuration>
+                    <formats>XML</formats>
+                </configuration>
                 <executions>
                     <execution>
                         <goals>
@@ -79,12 +82,23 @@
                     <execution>
                         <id>report</id>
                         <phase>test</phase>
+
                         <goals>
                             <goal>report</goal>
+
                         </goals>
+                        <configuration>
+                            <formats>
+                                <format>XML</format>
+                                <format>HTML</format>
+                            </formats>
+                        </configuration>
                     </execution>
+
                 </executions>
+
             </plugin>
+
 
 
         </plugins>
